--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@tailwindcss/aspect-ratio": "^0.2.1",
         "@vue/composition-api": "^1.1.2",
         "@yeger/vue2-masonry-wall": "^1.1.5",
+        "v-lazy-image": "^2.0.1",
         "vue": "^2.6.14",
         "vue-copy-to-clipboard": "^1.0.3",
         "vue-i18n": "^8.25.0"
