--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@inertiajs/inertia-vue": "^0.7.2",
         "@marvr/storyblok-rich-text-vue-renderer": "^2.0.1",
         "@tailwindcss/aspect-ratio": "^0.2.1",
+        "@tailwindcss/line-clamp": "^0.2.1",
         "@vue/composition-api": "^1.1.2",
         "@yeger/vue2-masonry-wall": "^1.1.5",
         "v-lazy-image": "^2.0.1",
